Add used, generated, agents endpoints to activities path
Enable  client to retrieve lists of referenced documents from
each field for a specified Activity.
