# synprov/controllers/activities_controller.py
@@ -7,11 +7,9 @@ from mongoengine.errors import NotUniqueError
 from synprov.models import Activity  # noqa: E501
 from synprov.models import Agent  # noqa: E501
 from synprov.models import Reference  # noqa: E501
-from synprov.util import convert_keys
 from synprov.config import mongo
 
 
-@convert_keys
 def create_activity(body):  # noqa: E501
     """Create a new.
 
@@ -44,7 +42,7 @@ def create_activity(body):  # noqa: E501
     activity.activity_id = uuid.uuid4().hex
     activity.save()
 
-    return activity.to_json()
+    return activity
 
 
 def delete_activity(id):  # noqa: E501
@@ -60,7 +58,6 @@ def delete_activity(id):  # noqa: E501
     return 'do some magic!'
 
 
-@convert_keys
 def get_activity(id):  # noqa: E501
     """Get an existing.
 
@@ -71,10 +68,52 @@ def get_activity(id):  # noqa: E501
 
     :rtype: Activity
     """
-    return Activity.objects(activity_id=id).to_json()
+    print(type(Activity.objects.get(activity_id=id)))
+    return Activity.objects.get(activity_id=id)
 
 
-@convert_keys
+def get_activity_used(id):  # noqa: E501
+    """Get used by an existing.
+
+    Get entities used by an existing Activity # noqa: E501
+
+    :param id: The ID of the activity to fetch.
+    :type id: str
+
+    :rtype: List[Reference]
+    """
+    activity = Activity.objects.get(activity_id=id)
+    return activity.used
+
+
+def get_activity_generated(id):  # noqa: E501
+    """Get generated by an existing.
+
+    Get entities generated by an existing Activity # noqa: E501
+
+    :param id: The ID of the activity to fetch.
+    :type id: str
+
+    :rtype: List[Reference]
+    """
+    activity = Activity.objects.get(activity_id=id)
+    return activity.generated
+
+
+def get_activity_agents(id):  # noqa: E501
+    """Get agents for an existing.
+
+    Get agents associated with an existing Activity # noqa: E501
+
+    :param id: The ID of the activity to fetch.
+    :type id: str
+
+    :rtype: List[Reference]
+    """
+    activity = Activity.objects.get(activity_id=id)
+    return activity.agents
+
+
 def list_activities():  # noqa: E501
     """.
 
@@ -83,10 +122,9 @@ def list_activities():  # noqa: E501
 
     :rtype: List[Activity]
     """
-    return Activity.objects().to_json()
+    return Activity.objects()
 
 
-@convert_keys
 def update_activity(id, body=None):  # noqa: E501
     """Update an.
 
