# synprov/openapi/openapi.yaml
@@ -4,7 +4,7 @@ info:
   title: Provenance Service
   version: 0.1.0
 servers:
-- url: /rest
+- url: /rest/prov/v1
 tags:
 - description: "."
   name: Activities
@@ -13,7 +13,7 @@ tags:
 - description: "."
   name: Agents
 paths:
-  /prov/v1/activities:
+  /activities:
     get:
       description: List Activities
       operationId: list_activities
@@ -39,7 +39,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ActivityRequest'
+              $ref: '#/components/schemas/Activity'
         required: true
       responses:
         201:
@@ -53,7 +53,7 @@ paths:
       - Activities
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.activities_controller
-  /prov/v1/activities/{id}:
+  /activities/{id}:
     delete:
       description: Delete an Activity
       operationId: delete_activity
@@ -119,7 +119,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ActivityRequest'
+              $ref: '#/components/schemas/Activity'
         description: Update an Activity
         required: false
       responses:
@@ -134,7 +134,88 @@ paths:
       - Activities
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.activities_controller
-  /prov/v1/agents:
+  /activities/{id}/used:
+    get:
+      description: Get entities used by an existing Activity
+      operationId: get_activity_used
+      parameters:
+      - description: The ID of the activity to fetch.
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Reference'
+                type: array
+          description: "."
+      summary: Get used by an existing.
+      tags:
+      - Activities
+      x-codegen-request-body-name: body
+      x-openapi-router-controller: synprov.controllers.activities_controller
+  /activities/{id}/generated:
+    get:
+      description: Get entities generated by an existing Activity
+      operationId: get_activity_generated
+      parameters:
+      - description: The ID of the activity to fetch.
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Reference'
+                type: array
+          description: "."
+      summary: Get generated by an existing.
+      tags:
+      - Activities
+      x-codegen-request-body-name: body
+      x-openapi-router-controller: synprov.controllers.activities_controller
+  /activities/{id}/agents:
+    get:
+      description: Get agents associated with an existing Activity
+      operationId: get_activity_agents
+      parameters:
+      - description: The ID of the activity to fetch.
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Agent'
+                type: array
+          description: "."
+      summary: Get agents for an existing.
+      tags:
+      - Activities
+      x-codegen-request-body-name: body
+      x-openapi-router-controller: synprov.controllers.activities_controller
+  /agents:
     get:
       description: List Agents
       operationId: list_agents
@@ -151,7 +232,7 @@ paths:
       tags:
       - Agents
       x-openapi-router-controller: synprov.controllers.agents_controller
-  /prov/v1/agents/{id}:
+  /agents/{id}:
     get:
       description: Get an existing Agent
       operationId: get_agent
@@ -176,7 +257,7 @@ paths:
       - Agents
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.agents_controller
-  /prov/v1/references:
+  /references:
     get:
       description: List References
       operationId: list_references
@@ -193,7 +274,7 @@ paths:
       tags:
       - References
       x-openapi-router-controller: synprov.controllers.references_controller
-  /prov/v1/references/{id}:
+  /references/{id}:
     get:
       description: Get an existing Reference
       operationId: get_reference
@@ -220,64 +301,21 @@ paths:
       x-openapi-router-controller: synprov.controllers.references_controller
 components:
   schemas:
-    ActivityRequest:
-      example:
-        name: name
-        description: description
-        used:
-        - role: role
-          entityId: entityId
-          entityVersionNumber: 0
-        - role: role
-          entityId: entityId
-          entityVersionNumber: 0
-      properties:
-        used:
-          items:
-            $ref: '#/components/schemas/Reference'
-          type: array
-        generated:
-          items:
-            $ref: '#/components/schemas/Reference'
-          type: array
-        agents:
-          items:
-            $ref: '#/components/schemas/Agent'
-          type: array
-        name:
-          type: string
-        description:
-          type: string
-      title: ActivityRequest
-      type: object
     Activity:
       example:
-        modifiedOn: 2000-01-23T04:56:07.000+00:00
         generated:
         - role: role
-          targetId: entityId
+          targetId: entity2
           targetVersionNumber: 0
-        - role: role
-          targetId: entityId
-          targetVersionNumber: 0
-        createdBy: createdBy
         name: name
-        description: description
-        etag: etag
-        modifiedBy: modifiedBy
+        description: agent1 generates entity2 from entity1
         id: id
         used:
         - role: role
-          targetId: entityId
+          targetId: entity1
           targetVersionNumber: 0
-        - role: role
-          targetId: entityId
-          targetVersionNumber: 0
-        createdOn: 2000-01-23T04:56:07.000+00:00
         agents:
-        - agentId: agentId
-          role: role
-        - agentId: agentId
+        - agentId: agent1
           role: role
       properties:
         id:
@@ -294,18 +332,6 @@ components:
           items:
             $ref: '#/components/schemas/Agent'
           type: array
-        createdBy:
-          type: string
-        etag:
-          type: string
-        modifiedOn:
-          format: date-time
-          type: string
-        modifiedBy:
-          type: string
-        createdOn:
-          format: date-time
-          type: string
         name:
           type: string
         description:
